--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h2{
   font-family: sans-serif;
   font-size: 32px;
   line-height: 1;
-  padding: 25px;
+  padding: 15px;
   text-align: center;
   /* color: #86C232; */
   color: white;
@@ -43,11 +43,35 @@ h3{
 
 }
 
+.titles {
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  font-family: Helvetica;
+  text-shadow:
+    0 1px 0 #ccc,
+    0 2px 0 #c9c9c9,
+    0 3px 0 #bbb,
+    0 4px 0 #b9b9b9,
+    0 5px 0 #aaa,
+    0 6px 1px rgba(0,0,0,.1),
+    0 0 5px rgba(0,0,0,.1),
+    0 1px 3px rgba(0,0,0,.3),
+    0 3px 5px rgba(0,0,0,.2),
+    0 5px 10px rgba(0,0,0,.25),
+    0 10px 10px rgba(0,0,0,.2),
+    0 20px 20px rgba(0,0,0,.15);
+}
+
+.titles {
+  text-align: center;
+}
 
 img{
   max-height:500px;
-
-  width: 90vw;
+  width: 100%;
+  margin: 0 auto;
+  display: block;
 
 }
 
@@ -108,21 +132,17 @@ header p{
   font-size: 24px;
   padding:10px 10px;
   text-align: center;
+  font-family: 'Cutive Mono', monospace;
 }
 
-/* .nav{
 
-  background-color: #ddd;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: left;
-  align-self: center;
-  font-family: cursive;
-} */
-
-
-
-
+/* i{
+  color: #61892f;
+  /* height:50px; */
+  /* width:98px;
+  margin: 20px */
+  /* align-content: center; */
+/* } */ 
 
 .dropbtn {
   background-color: #86C232;
@@ -172,11 +192,23 @@ footer{
   padding-top: 10px;
   padding-bottom:10px;
   text-align: center;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  position: fixed;
 }
+
+
+.index_container{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3,1fr)
+
+
+}
+
+
 .container{
-
-
-  /*Your code here  */
   display: grid;
   grid-template-columns: 1fr;
   grid-row-gap: 10px;
@@ -185,22 +217,30 @@ footer{
 }
 
 .container div{
-  padding: 10px;
-  border: 10px solid #61892f;
-  /* border: 10px solid #474B4F; */
+  border: 7px solid #61892f;
 }
 
 
-i{
-  color: #61892f;
-}
 
+
+
+.nw_ord_pic{
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 1;
+}
 .nw_ordinance{
   /* max-height: 700px; */
   overflow: hidden;
   align-content: center;
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 1;
 }
 
+
+.nw_ord_pic img {
+  -webkit-filter: blur(3px);
+  filter: blur(3px);
+}
 
 
 /* .northwest_text{
@@ -302,4 +342,59 @@ i{
 .current_day{
   overflow: scroll;
   max-height: 600px;
+}
+
+
+@media screen and (min-width: 800px) {
+  .container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  }
+
+
+  .pony_express:hover{
+    background-image: url("/images/money_bag.jpg");
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
+
+
+
+
+
+media screen and (prefers-reduced-motion: reduce){
+  html{
+      scroll-behavior: auto; /* Removes scroll animation */
+  }
+
+  .skip a{
+    background: white;
+    left: 0;
+    padding: 6px;
+    position: absolute;
+    top: -40px;
+    /* -webkit-transition: default; /* Your code here - set to default setting */ */
+    /* transition: default; /* Your code here - set to default setting */ */
+    /* z-index: 1; */
+    -webkit-transition: none;
+    transition: none;
+    z-index: 1;
+  }
+
+  .skip a:focus{
+    top:0;
+  }
 }
