--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ h3{
 }
 
 img{
-  max-height:500px;
+  max-height:600px;
   width: 100%;
   margin: 0 auto;
   display: block;
@@ -142,7 +142,7 @@ header p{
   /* width:98px;
   margin: 20px */
   /* align-content: center; */
-/* } */ 
+/* } */
 
 .dropbtn {
   background-color: #86C232;
@@ -192,10 +192,10 @@ footer{
   padding-top: 10px;
   padding-bottom:10px;
   text-align: center;
-  bottom: 0;
-  left: 0;
+  /* bottom: 0;
+  left: 0; */
   width: 100vw;
-  position: fixed;
+  position: relative;
 }
 
 
@@ -236,24 +236,9 @@ footer{
   grid-column: 1 / span 1;
 }
 
-
 .nw_ord_pic img {
   -webkit-filter: blur(3px);
   filter: blur(3px);
-}
-
-
-/* .northwest_text{
-  grid-column: 2 / span 1;
-  grid-row: 3 / span 1;
-  align-self: center;
-  justify-content: center;
-} */
-
-
-.firstgame img{
-
-
 }
 
 .firstgame{
@@ -345,29 +330,123 @@ footer{
 }
 
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 600px) {
   .container{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   }
-
-
-  .pony_express:hover{
-    background-image: url("/images/money_bag.jpg");
-  }
-
-
-
-
-
-
-
-
-
-
-
-
+  /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+}
+@media screen and (min-width: 800px) {
+  .container{
+  display: flex;
+  flex-wrap: wrap;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  }
+  /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+}
+
+  /* .pony_express:hover{
+    background-image: url("/images/money_bag.jpg");
+  } */
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
