--- a/css/formStyle.css
+++ b/css/formStyle.css
@@ -257,3 +257,33 @@ textarea:hover {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #61892f;}
+
+nav ul{
+  list-style-type: none;
+}
+
+nav li{
+  display: inline;
+  padding-right: 20px;
+}
+
+nav a:hover{
+  text-decoration: underline;
+}
+
+.active {
+  background-color: #61892f;
+  color: white;
+}
+
+footer{
+  background-color: black;
+  color: white;
+  padding-top: 10px;
+  padding-bottom:10px;
+  text-align: center;
+  /* bottom: 0;
+  left: 0; */
+  width: 100vw;
+  position: relative;
+}
