--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html{
 
 body{
   background-color: #222629;
+  /* background-color: black; */
   font-size: 18px;
 
 }
@@ -42,6 +43,7 @@ h3{
 
 }
 
+
 .titles {
   color: #fff;
   font-size: 40px;
@@ -76,10 +78,9 @@ img{
   padding-top: 10px;
 }
 
-
-
 p{
-  color: #6B6E70;
+  /* color: #6B6E70; */
+  color: white;
 }
 
 div p{
@@ -134,14 +135,28 @@ header p{
   font-family: 'Cutive Mono', monospace;
 }
 
+/* .titles { */
+  /* overflow: hidden; /* Ensures the content is not revealed until the animation */ 
+  /* border-right: .15em solid #86C232; /* The typwriter cursor */
+  /* white-space: nowrap; /* Keeps the content on a single line */
+  /* margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  /* letter-spacing: .15em; /* Adjust as needed */
+  /* animation:
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end 2;
+} */
 
-/* i{
-  color: #61892f;
-  /* height:50px; */
-  /* width:98px;
-  margin: 20px */
-  /* align-content: center; */
-/* } */
+/* The typing effect */
+/* @keyframes typing {
+  from { width: 0 }
+  to { width: 100%}
+} */
+
+/* The typewriter cursor effect */
+/* @keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #86C232; }
+} */
 
 .dropbtn {
   background-color: #86C232;
@@ -187,7 +202,6 @@ header p{
 
 footer{
   background-color: black;
-  color: white;
   padding-top: 10px;
   padding-bottom:10px;
   text-align: center;
@@ -196,6 +210,11 @@ footer{
   width: 100vw;
   position: relative;
 }
+
+footer p{
+  color: white
+}
+
 
 .container{
   display: grid;
@@ -208,6 +227,9 @@ footer{
 
 .container div{
   border: 7px solid #61892f;
+
+}
+.course_topics{
 
 }
 
@@ -345,7 +367,7 @@ footer{
 
 /* Style the back side */
 .flip-card-back {
-  background-color: dodgerblue;
+  background-color: #222629;
   color: white;
   transform: rotateY(180deg);
 }
@@ -363,8 +385,8 @@ footer{
   /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
   background-color: transparent;
-  width: 300px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   border: 1px solid #f1f1f1;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
@@ -400,7 +422,7 @@ footer{
 
 /* Style the back side */
 .flip-card-back {
-  background-color: dodgerblue;
+  background-color: #222629;
   color: white;
   transform: rotateY(180deg);
 }
@@ -411,11 +433,22 @@ footer{
   /* border: 7px solid #61892f; */
   width: 28%;
 }
+
+/* .pony_express:hover {
+  background-color: 'pink';
+  background-image: url("../images/money_bag.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: multiply;
+} */
+
+
+
+
 }
 
-  /* .pony_express:hover{
-    background-image: url("/images/money_bag.jpg");
-  } */
+
 
 
 
