--- a/css/formStyle.css
+++ b/css/formStyle.css
@@ -125,6 +125,22 @@ input:hover {
   color: #e2dedb;
 }
 
+.skip a{
+  background: white;
+  left: 0;
+  padding: 6px;
+  top:   -40px;
+  -webkit-transition: top 1s ease-out;
+  transition: top 1s ease-out;
+  z-index: 1;
+  position: absolute;
+
+}
+
+.skip a:focus{
+  top: 0px;
+}
+
 textarea {
   width: 470px;
   max-width: 470px;
