--- a/css/formStyle.css
+++ b/css/formStyle.css
@@ -262,3 +262,27 @@ footer{
   width: 100vw;
   position: absolute;
 }
+
+media screen and (prefers-reduced-motion: reduce){
+  html{
+      scroll-behavior: auto; /* Removes scroll animation */
+  }
+
+  .skip a{
+    background: white;
+    left: 0;
+    padding: 6px;
+    position: absolute;
+    top: -40px;
+    /* -webkit-transition: default; /* Your code here - set to default setting */ */
+    /* transition: default; /* Your code here - set to default setting */ */
+    /* z-index: 1; */
+    -webkit-transition: none;
+    transition: none;
+    z-index: 1;
+  }
+
+  .skip a:focus{
+    top:0;
+  }
+}
