--- a/css/formStyle.css
+++ b/css/formStyle.css
@@ -25,11 +25,12 @@ input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
 }
 
 input::placeholder, textarea::placeholder {
-  color: #aca49c;
+  /* color: #aca49c; */
+  color: white;
   font-size: 0.875em;
 }
 
-input:focus::placeholder, textarea::focus:placeholder {
+input:focus::placeholder, textarea:focus:placeholder {
   color: #bbb5af;
 }
 
@@ -110,7 +111,7 @@ input {
 
   background: transparent;
   outline: none;
-  color: #726659;
+  color: white;
 
   border: solid 1px #b3aca7;
   border-bottom: none;
@@ -152,7 +153,7 @@ textarea {
   background: transparent;
   outline: none;
 
-  color: #726659;
+  color: white;
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
 
@@ -177,7 +178,7 @@ textarea:hover {
 
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
-  color: #b3aca7;
+  color: white;
 
   outline:none;
   cursor: pointer;
