--- a/css/formStyle.css
+++ b/css/formStyle.css
@@ -216,7 +216,7 @@ textarea:hover {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  font-family: cursive;
+  font-family: 'Cutive Mono', monospace;
 }
 
 .nav a {
@@ -276,9 +276,9 @@ media screen and (prefers-reduced-motion: reduce){
     padding: 6px;
     position: absolute;
     top: -40px;
-    /* -webkit-transition: default; /* Your code here - set to default setting */ */
-    /* transition: default; /* Your code here - set to default setting */ */
-    /* z-index: 1; */
+    -webkit-transition: default;
+    transition: default;
+    z-index: 1;
     -webkit-transition: none;
     transition: none;
     z-index: 1;
