--- a/css/formStyle.css
+++ b/css/formStyle.css
@@ -229,6 +229,8 @@ textarea:hover {
 /* Change color of dropdown links on hover */
 .nav a:hover {background-color: #ddd;}
 
+
+
 /* Show the dropdown menu on hover */
 .dropdown:hover .nav {display: block;}
 
@@ -251,6 +253,30 @@ nav a:hover{
 .active {
   background-color: #61892f;
   color: white;
+}
+
+.titles {
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  font-family: Helvetica;
+  text-shadow:
+    0 1px 0 #ccc,
+    0 2px 0 #c9c9c9,
+    0 3px 0 #bbb,
+    0 4px 0 #b9b9b9,
+    0 5px 0 #aaa,
+    0 6px 1px rgba(0,0,0,.1),
+    0 0 5px rgba(0,0,0,.1),
+    0 1px 3px rgba(0,0,0,.3),
+    0 3px 5px rgba(0,0,0,.2),
+    0 5px 10px rgba(0,0,0,.25),
+    0 10px 10px rgba(0,0,0,.2),
+    0 20px 20px rgba(0,0,0,.15);
+}
+
+.titles {
+  text-align: center;
 }
 
 footer{
