--- a/css/style.css
+++ b/css/style.css
@@ -364,6 +364,9 @@ border: 5px solid #86C232;
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
+.flip-card:focus .flip-card-inner {
+  transform: rotateY(180deg);
+}
 
 /* Position the front and back side */
 .flip-card-front, .flip-card-back {
