--- a/css/formStyle.css
+++ b/css/formStyle.css
@@ -114,7 +114,7 @@ input {
   color: white;
 
   border: solid 1px #b3aca7;
-  border-bottom: none;
+  /* border-bottom: none; */
 
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -285,6 +285,7 @@ footer{
   padding-top: 10px;
   padding-bottom:10px;
   text-align: center;
+  bottom: 0;
   width: 100vw;
   position: relative;
 }
