--- a/css/formStyle.css
+++ b/css/formStyle.css
@@ -98,14 +98,14 @@ header {
 
 #form {
   position: relative;
-  width: 500px;
+  width: 300px;
   margin: 50px auto 100px auto;
 }
 
 input {
   font-family: 'Lato', sans-serif;
   font-size: 0.875em;
-  width: 470px;
+  width: 270px;
   height: 50px;
   padding: 0px 15px 0px 15px;
 
@@ -144,10 +144,10 @@ input:hover {
 }
 
 textarea {
-  width: 470px;
-  max-width: 470px;
-  height: 110px;
-  max-height: 110px;
+  width: 270px;
+  max-width: 270px;
+  height: 60px;
+  max-height: 600px;
   padding: 15px;
 
   background: transparent;
@@ -171,7 +171,7 @@ textarea:hover {
 }
 
 #submit {
-  width: 502px;
+  width: 302px;
 
   padding: 0;
   margin: -5px 0px 0px 0px;
@@ -314,5 +314,26 @@ media screen and (prefers-reduced-motion: reduce){
   }
   *:focus{
     border: 2px solid red;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  #form {
+    width: 500px;
+  }
+
+  input {
+    width: 470px;
+    height: 50px;
+  }
+
+  textarea {
+    width: 470px;
+    max-width: 470px;
+    height: 110px;
+    max-height: 110px;
+  }
+  #submit {
+    width: 502px;
   }
 }
